Make the scripts for timers

--- a/src/template.html
+++ b/src/template.html
@@ -502,7 +502,7 @@
                                 <p class="stock__text">
                                     Важными преимуществом использования айпи телефона вместо обычного, является на порядок более низкая цена соединения. 
                                 </p>
-                                <div class="stock__time-box">
+                                <div class="stock__time-box" data-timer="12-8-2022">
                                     <div class="stock__time-text">Срок действия:</div>
                                     <div class="timer">
                                         <div class="timer__day timer__day-1">0</div>
@@ -511,8 +511,8 @@
                                         <div class="timer__hour timer__hour-1">0</div>
                                         <div class="timer__hour timer__hour-2">0</div>
                                         <div class="timer__dots timer__dots-2"></div>
-                                        <div class="timer__minut timer__minut-1">1</div>
-                                        <div class="timer__minut timer__minut-2">6</div>
+                                        <div class="timer__minut timer__minut-1">0</div>
+                                        <div class="timer__minut timer__minut-2">0</div>
                                         <div class="timer__label-day">дней</div>
                                         <div class="timer__label-hour">часов</div>
                                         <div class="timer__label-minut">минут</div>
@@ -530,7 +530,7 @@
                                 <p class="stock__text">
                                     Важными преимуществом использования айпи телефона вместо обычного, является на порядок более низкая цена соединения. 
                                 </p>
-                                <div class="stock__time-box">
+                                <div class="stock__time-box" data-timer="20-08-2022">
                                     <div class="stock__time-text">Срок действия:</div>
                                     <div class="timer">
                                         <div class="timer__day timer__day-1">0</div>
@@ -539,8 +539,8 @@
                                         <div class="timer__hour timer__hour-1">0</div>
                                         <div class="timer__hour timer__hour-2">0</div>
                                         <div class="timer__dots timer__dots-2"></div>
-                                        <div class="timer__minut timer__minut-1">1</div>
-                                        <div class="timer__minut timer__minut-2">6</div>
+                                        <div class="timer__minut timer__minut-1">0</div>
+                                        <div class="timer__minut timer__minut-2">0</div>
                                         <div class="timer__label-day">дней</div>
                                         <div class="timer__label-hour">часов</div>
                                         <div class="timer__label-minut">минут</div>
@@ -558,7 +558,7 @@
                                 <p class="stock__text">
                                     Важными преимуществом использования айпи телефона вместо обычного, является на порядок более низкая цена соединения. 
                                 </p>
-                                <div class="stock__time-box">
+                                <div class="stock__time-box" data-timer="24-08-2022">
                                     <div class="stock__time-text">Срок действия:</div>
                                     <div class="timer">
                                         <div class="timer__day timer__day-1">0</div>
@@ -567,8 +567,8 @@
                                         <div class="timer__hour timer__hour-1">0</div>
                                         <div class="timer__hour timer__hour-2">0</div>
                                         <div class="timer__dots timer__dots-2"></div>
-                                        <div class="timer__minut timer__minut-1">1</div>
-                                        <div class="timer__minut timer__minut-2">6</div>
+                                        <div class="timer__minut timer__minut-1">0</div>
+                                        <div class="timer__minut timer__minut-2">0</div>
                                         <div class="timer__label-day">дней</div>
                                         <div class="timer__label-hour">часов</div>
                                         <div class="timer__label-minut">минут</div>
@@ -586,7 +586,7 @@
                                 <p class="stock__text">
                                     Важными преимуществом использования айпи телефона вместо обычного, является на порядок более низкая цена соединения. 
                                 </p>
-                                <div class="stock__time-box">
+                                <div class="stock__time-box" data-timer="22-08-2022">
                                     <div class="stock__time-text">Срок действия:</div>
                                     <div class="timer">
                                         <div class="timer__day timer__day-1">0</div>
@@ -595,12 +595,12 @@
                                         <div class="timer__hour timer__hour-1">0</div>
                                         <div class="timer__hour timer__hour-2">0</div>
                                         <div class="timer__dots timer__dots-2"></div>
-                                        <div class="timer__minut timer__minut-1">1</div>
-                                        <div class="timer__minut timer__minut-2">6</div>
+                                        <div class="timer__minut timer__minut-1">0</div>
+                                        <div class="timer__minut timer__minut-2">0</div>
                                         <div class="timer__label-day">дней</div>
                                         <div class="timer__label-hour">часов</div>
                                         <div class="timer__label-minut">минут</div>
-                                      </div>
+                                    </div>
                                 </div>
                                 <a href="#" class="stock__item-link">Подробнее</a>
                             </li>
